@@ -138,7 +138,8 @@ write.table(league0$random, file = "league0-random.csv",
             row.names = FALSE, col.names = FALSE,
             sep = ",")
 #
-# Create Excel files with league tables (using R package WriteXLS)
+# Create Excel files with league tables (using R package WriteXLS
+# which requires Perl https://www.perl.org/)
 #
 library(WriteXLS)
 #
